Lint for peakaboo-swing